Fix VerificationService + write tests